JHipster changes